--- a/Modl and VarNet/configs/base_modl,k=1.yaml
+++ b/Modl and VarNet/configs/base_modl,k=1.yaml
@@ -1,9 +1,9 @@
-config_name: base_varnet,k=1
-description: "base config, k=1. Restore weights from <base_varnet,k=1>"
+config_name: base_modl,k=1
+description: "base config, k=1"
 
 n_layers: 5
 k_iters: 1
-epochs: 50
+epochs: 20
 
 dataset_name: modl_dataset
 dataset_params:
@@ -12,10 +12,10 @@ dataset_params:
 val_data: False
 batch_size: 1
 
-model_name: base_varnet
+model_name: base_modl
 
 restore_weights: False #False, best, inter, final
-restore_path: 'workspace/base_varnet,k=1/checkpoints/'
+restore_path: 
 
 loss_name: MSE
 score_names: ['PSNR', 'SSIM']
