--- a/Modl and VarNet/configs/base_varnet,k=1.yaml
+++ b/Modl and VarNet/configs/base_varnet,k=1.yaml
@@ -1,9 +1,9 @@
-config_name: base_varnet,k=10
-description: "base config, k=10. Restore weights from <base_varnet,k=1>"
+config_name: base_varnet,k=1
+description: "base config, k=1. Restore weights from <base_varnet,k=1>"
 
 n_layers: 5
-k_iters: 10
-epochs: 50
+k_iters: 1
+epochs: 20
 
 dataset_name: modl_dataset
 dataset_params:
@@ -15,7 +15,7 @@ batch_size: 1
 model_name: base_varnet
 
 restore_weights: False #False, best, inter, final
-restore_path: 'workspace/base_varnet,k=1/checkpoints/'
+restore_path: 
 
 loss_name: MSE
 score_names: ['PSNR', 'SSIM']
